--- a/common/index.css
+++ b/common/index.css
@@ -11,6 +11,7 @@ body{
   background-size: cover;
   background-attachment: fixed;
   background-position: 50% bottom;
+  overflow-y: hidden;
 }
 ::-webkit-scrollbar{
   display: none;
