--- a/common/index.css
+++ b/common/index.css
@@ -27,10 +27,12 @@ body{
   max-width: 100%;
   width: 1024px;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 section{
+  overflow-x: hidden;
   height: 100vh;
   width: 100%;
   display: table;
