--- a/common/index.css
+++ b/common/index.css
@@ -1,3 +1,68 @@
+
+
+
+@media screen and (min-width: 1024px){
+  .livecard_area{
+    border-top: 3px dashed #999;
+    margin: 2rem 2rem 0;
+    padding: 1rem;
+    text-align: left;
+  }
+  .livecard_area h3{
+    font-family: 'M PLUS Rounded 1c', sans-serif;
+  }
+  .livecard{
+    display: inline-block;
+    width: calc(100% /6);
+    background-color:rgba(255,255,255,0.5);
+    transition: opacity .25s ease;
+    margin: 5px;
+    border-radius: 5px;
+    height: 200px;
+  }
+  .livecard:hover{
+    opacity: .7;
+  }
+  .livecard .thumb{
+    position: relative;
+  }
+  .livecard .thumb img{
+    width: 100%;
+    border-radius: 5px 5px 0 0;
+  }
+  .livecard .thumb span{
+    z-index: 1;
+    position: absolute;
+    top: 4px;
+    left: 4px;
+    background-color: #252525;
+    color: #FAFAFA;
+    font-size: 10px;
+    padding: .5px 5px;
+    border-radius: 2.5px;
+  }
+  .livecard .subject p.title{
+    font-size: 14px !important;
+    font-weight: bold;
+    margin: 0 2.5px;
+  }
+  .livecard .subject p.date{
+    font-size: 12px !important;
+    font-weight: normal !important;
+    margin: 5px;
+  }
+}
+
+@media screen and (max-width: 1023px){
+  .livecard_area{
+    display: none;
+  }
+}
+
+
+
+
+
 *{
   margin: 0;
   padding: 0;
@@ -7,7 +72,7 @@
 
 body{
   font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,Hiragino Kaku Gothic ProN,Meiryo,sans-serif;
-  background-image: url("/common/maki.png");
+  background-image: url("/common/bg.png");
   background-size: cover;
   background-attachment: fixed;
   background-position: 50% bottom;
@@ -75,8 +140,8 @@ a.help{
 }
 a.help::before{
   display: inline-block;
-  content:"？";
-  background-color: #0080FF;
+  content:"百";
+  background-color: #FF0000;
   color: white;
   font-weight: bold;
   border-radius: 12px;
