--- a/static/lets-go-siberia/letsgo.css
+++ b/static/lets-go-siberia/letsgo.css
@@ -11,7 +11,7 @@
 
 body{
   font-family: -apple-system,BlinkMacSystemFont,Helvetica Neue,Hiragino Kaku Gothic ProN,Meiryo,sans-serif;
-  background-image: url("/common/bg.png");
+  background-image: url("/2020/common/bg.png");
   background-size: cover;
   background-attachment: fixed;
   background-position: 50% bottom;
